# libxvc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
cmake/: libxvc-config.cmake.in  xdaqmetadata-config.cmake
test/: CMakeLists.txt  updater_test.cc  updater_test_base.h
tool/: CMakeLists.txt  test_download.cc  test_download_verify.cc  test_handshake.cc  test_prepare_transfer.cc  test_transfer_file.cc  xvc_tool.cc  xvc_update_tool.cc
xdaqvc/: CMakeLists.txt  camera.cc  camera.h  port_pool.cc  port_pool.h  server.cc  server.h  updater.cc  updater.h  ws_client.cc  ws_client.h  xvc.cc  xvc.h
xvc/include/: camera.h  port_pool.h  xvc.h
xvc/src/: camera.cc  port_pool.cc  xvc.cc
